tests/baselines/reference/alwaysStrictNoImplicitUseStrict.errors.txt
error TS5102: Option 'noImplicitUseStrict' has been removed. Please remove it from your configuration.
alwaysStrictNoImplicitUseStrict.ts(3,13): error TS1100: Invalid use of 'arguments' in strict mode.


!!! error TS5102: Option 'noImplicitUseStrict' has been removed. Please remove it from your configuration.
==== alwaysStrictNoImplicitUseStrict.ts (1 errors) ====
    namespace M {
        export function f() {
            var arguments = [];
                ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
        }
    }